Añado rutas y llamados a API

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
-<app-home></app-home>
+ <div class="app-container">
+    <!-- <h1>{{ title }}</h1>
+    <nav>
+      <a routerLink="/">Inicio</a>
+      <a routerLink="/starships">Naves</a>
+    </nav> -->
+    
+    <router-outlet></router-outlet> 
+  </div>
 
 
