--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <div class="welcome-container w-screen h-screen overflow-hidden">
+    <video class="w-full h-full object-cover" autoplay loop muted>
+      <source src="assets/video/2611250-hd_1280_720_30fps.mp4" type="video/mp4">
+      Tu navegador no soporta el video.
+    </video>
+    <button class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-yellow-500 text-white px-10 py-4  hover:bg-white hover:text-black rounded-full" (click)="irAHome()">Entrar</button>
+  </div>
+</body>
+</html>
 
+
+  
