--- a/src/app/detail-starships/detail-starships.component.html
+++ b/src/app/detail-starships/detail-starships.component.html
@@ -5,14 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<body>
+<body class="min-h-screen flex items-center justify-center">
   
 @if (starship) {
-  <h2>{{ starship.name }}</h2>
-  <p>Modelo: {{ starship.model }}</p>
-  <p>Fabricante: {{ starship.manufacturer }}</p>
-  <p>Coste en créditos: {{ starship.cost_in_credits }}</p>
-  <img [src]="'https://starwars-visualguide.com/assets/img/starships/' + starship.url.split('/').slice(-2, -1)[0] + '.jpg'" alt="{{ starship.name }}" />
+
+  <div class="card lg:card-side bg-black border-2 border-gray-600 shadow-md shadow-white max-w-7xl mx-auto p-8">
+    <figure>
+      <img [src]="'https://starwars-visualguide.com/assets/img/starships/' + starship.url.split('/').slice(-2, -1)[0] + '.jpg'" alt="{{ starship.name }}" />
+    </figure>
+    <div class="card-body">
+      <h2 class="card-title text-3xl">{{ starship.name }}</h2>
+      <br>
+      <p><strong>Modelo: </strong>{{ starship.model }}</p>
+      <p><strong>Fabricante: </strong>{{ starship.manufacturer }}</p>
+      <p><strong>Coste en créditos: </strong>{{ starship.cost_in_credits }}</p>
+      <p><strong>Longitud: </strong>{{ starship.length }}</p>
+      <p><strong>Tripulación: </strong>{{ starship.crew }}</p>
+      <p><strong>Velocidad atmosférica: </strong>{{ starship.max_atmosphering_speed }}</p>
+      <br>
+      <div class="card-actions justify-end">
+        <button class="btn bg-transparent border-2 border-cyan-700 text-white hover:text-black hover:border-cyan-700">Más detalles</button>
+      </div>
+    </div>
+  </div>
 }
 
 </body>
