--- a/src/app/starships/starships.component.html
+++ b/src/app/starships/starships.component.html
@@ -1,51 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-  </head>
-  <body>
+</head>
+<body>
+    <app-navegacion></app-navegacion>
+
     <div class="container mx-auto p-4">
-      <h1 class="text-3xl font-bold mb-6 text-center">Starships</h1>
+        <h1 class="text-3xl font-bold mb-6 text-center">Starships</h1>
 
-      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-        <div class="rounded-lg p-4 shadow-md">
-          @for (starship of starships; track starship.id) { >
-          <h3 class="text-xl font-semibold text-white mb-2">
-            {{ starship.name }}
-          </h3>
-          <img
-            class="w-32 h-32"
-            [src]="
-              'https://starwars-visualguide.com/assets/img/starships/' +
-              starship.url.split('/').slice(-2, -1)[0] +
-              '.jpg'
-            "
-            alt="Imagen de {{ starship.name }}"
-          />
-          <p class="text-gray-300 mb-4">
-            {{ starship.model }}
-          </p>
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+          @for (starship of starships; track starship.id) {
+            <div class="rounded-lg p-4 shadow-md bg-gray-800">
+              <h3 class="text-xl font-semibold text-white mb-2">
+                  {{ starship.name }}
+              </h3>
+              <img
+                  class="w-full h-32 object-cover"
+                  [src]="
+                      'https://starwars-visualguide.com/assets/img/starships/' +
+                      starship.url.split('/').slice(-2, -1)[0] +
+                      '.jpg'
+                  "
+                  alt="Imagen de {{ starship.name }}"
+              />
+              <p class="text-gray-300 mb-4">
+                  {{ starship.model }}
+              </p>
 
-          <button
-            (click)="verDetalles(starship.url)"
-            class="bg-yellow-500 text-white py-2 px-4 rounded hover:bg-yellow-700"
-          >
-            Ver detalles
-          </button>
+              <button
+                  (click)="verDetalles(starship.url)"
+                  class="bg-yellow-500 text-white py-2 px-4 rounded hover:bg-yellow-700"
+              >
+                  Ver detalles
+              </button>
+            </div>
           }
+        
         </div>
       </div>
 
+
       <div class="text-center mt-8">
-        <button
-          (click)="cargarNuevas()"
-          class="bg-yellow-600 text-black px-6 py-2 rounded-lg shadow-md hover:bg-yellow-500"
-        >
-          Cargar más
-        </button>
+          <button
+              (click)="cargarNuevas()"
+              class="bg-yellow-600 text-black px-6 py-2 rounded-lg shadow-md hover:bg-yellow-500"
+          >
+              Cargar más
+          </button>
       </div>
-    </div>
-  </body>
+
+</body>
 </html>
