--- a/src/app/navegacion/navegacion.component.html
+++ b/src/app/navegacion/navegacion.component.html
@@ -3,43 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Star Wars</title>
 </head>
 <body>
-    <header>
-        <nav class="bg-black border-gray-200 flex justify-between items-center px-4 lg:px-6 py-4 dark:bg-gray-800">
-            <div class="flex items-center flex-grow justify-center">
-                <a href="#" class="flex items-center">
-                    <img src="/assets/img/logo-star-wars.png" alt="logo" class="h-40 sm:h-60 object-contain"/>
-                    <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white"></span>
-                </a>
-            </div>
-            
-            <div class="flex items-center lg:order-2"> 
-                <a href="#" class="text-white font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 focus:outline-none">Log in</a>
-                <a href="#" class="text-black bg-yellow-500 hover:bg-yellow-600 focus:ring-4 focus:ring-yellow-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:bg-yellow-400 dark:hover:bg-yellow-500 focus:outline-none dark:focus:ring-yellow-600">Sign up</a>
-               
-                <button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
-                    <span class="sr-only">Open main menu</span>
-                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
-                    <svg class="hidden w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-                </button>
-            </div>
-        </nav>
-    </header>
+  <header>
+    <nav class="bg-black border-gray-200 grid grid-cols-3 items-center px-4 lg:px-6 py-4 dark:bg-gray-800">
 
-    <div role="tablist" class="tabs tabs-lifted justify-center text-white-custom">
-        <a routerLink="/home" routerLinkActive="tab-active" class="tab" role="tab" aria-label="Tab 1">
-          Home
+      <div class="flex items-center justify-center col-start-2">
+        <a href="#" class="flex items-center">
+          <img src="/assets/img/logo-star-wars.png" alt="logo" class="h-40 sm:h-60 object-contain" />
         </a>
-        <a routerLink="/starships" routerLinkActive="tab-active" class="tab" role="tab" aria-label="Tab 2">
-          Starships
-        </a>
-        <a routerLink="/pilotos" routerLinkActive="tab-active" class="tab" role="tab" aria-label="Tab 3">
-          Pilotos
-        </a>
+      </div>
+
+     <button (click)="toggleMenu()"
+     class="text-gray-500 lg:hidden inline-flex items-center justify-end p-2 rounded-lg ml-1 hover:bg-gray-100 focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
+    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
+    </button>
+
+      <div class="hidden lg:flex items-center justify-end space-x-4">
+        <a href="#" class="text-white font-medium rounded-lg text-sm px-4 py-2">Log in</a>
+        <a href="#" class="text-black bg-yellow-500 hover:bg-yellow-600 rounded-lg text-sm px-4 py-2">Sign up</a>
+      </div>
+    </nav>
+
+     @if(isOpen) {
+     <div class="lg:hidden bg-black text-white absolute w-full z-10 border-t border-gray-700">
+      <div class="flex flex-col items-center  space-y-4 py-4">
+
+        <a routerLink="/home" class="block text-white">HOME</a>
+        <a routerLink="/starships" class="block text-white">STARSHIPS</a>
+        <a routerLink="/pilotos" class="block text-white">PILOTOS</a>
+
+        <div class="space-y-2 w-full px-4">
+          <a href="#" class="block text-white bg-gray-700 py-2 rounded-lg text-center">Log in</a>
+          <a href="#" class="block text-black bg-yellow-500 py-2 rounded-lg text-center">Sign up</a>
+        </div>
+      </div>
     </div>
+}
+  </header>
 
-    <router-outlet></router-outlet>
+  <div role="tablist" class="tabs tabs-lifted justify-center text-white-custom hidden lg:flex">
+    <a routerLink="/home" routerLinkActive="tab-active" class="tab" role="tab">HOME</a>
+    <a routerLink="/starships" routerLinkActive="tab-active" class="tab" role="tab">STARSHIPS</a>
+    <a routerLink="/pilotos" routerLinkActive="tab-active" class="tab" role="tab">PILOTOS</a>
+  </div>
+
+  <router-outlet></router-outlet>
 </body>
 </html>
+
