--- a/src/app/starships/starships.component.html
+++ b/src/app/starships/starships.component.html
@@ -9,7 +9,7 @@
     <app-navegacion></app-navegacion>
 
     <div class="container mx-auto p-4">
-        <h1 class="text-3xl font-bold mb-6 text-center">Starships</h1>
+        <h1 class="text-3xl font-bold mb-6 text-center">STARSHIPS</h1>
 
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
           @for (starship of starships; track starship.id) {
@@ -46,7 +46,7 @@
       <div class="text-center mt-8">
           <button
               (click)="cargarNuevas()"
-              class="bg-yellow-600 text-black px-6 py-2 rounded-lg shadow-md hover:bg-yellow-500"
+              class="bg-yellow-500 text-black px-6 py-2 rounded-lg shadow-md hover:bg-yellow-700"
           >
               Cargar más
           </button>
