--- a/src/app/navegacion/navegacion.component.html
+++ b/src/app/navegacion/navegacion.component.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <nav class="bg-black border-gray-200 grid grid-cols-3 items-center px-4 lg:px-6 py-4 dark:bg-gray-800">
+    <nav class="bg-black border-gray-200 grid grid-cols-3 items-center px-4 lg:px-6 py-4 dark:bg-black">
 
       <div class="flex items-center justify-center col-start-2">
         <a href="#" class="flex items-center">
@@ -35,8 +35,8 @@
         <a routerLink="/pilotos" class="block text-white">PILOTOS</a>
 
         <div class="space-y-2 w-full px-4">
-          <a href="#" class="block text-white bg-gray-700 py-2 rounded-lg text-center">Log in</a>
-          <a href="#" class="block text-black bg-yellow-500 py-2 rounded-lg text-center">Sign up</a>
+          <a routerLink="/login" class="block text-white bg-gray-700 py-2 rounded-lg text-center">Log in</a>
+          <a routerLink="/register" class="block text-black bg-yellow-500 py-2 rounded-lg text-center">Sign up</a>
         </div>
       </div>
     </div>
