--- a/src/app/navegacion/navegacion.component.html
+++ b/src/app/navegacion/navegacion.component.html
@@ -4,50 +4,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Star Wars</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
   <header>
     <nav class="bg-black border-gray-200 grid grid-cols-3 items-center px-4 lg:px-6 py-4 dark:bg-black">
-
+      
+      <div class="flex space-x-6 col-start-1 items-center ml-4 lg:ml-10">
+        <a href="https://www.facebook.com" target="_blank" class="text-white hover:text-yellow-500 text-2xl">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://www.instagram.com" target="_blank" class="text-white hover:text-yellow-500 text-2xl">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://www.linkedin.com" target="_blank" class="text-white hover:text-yellow-500 text-2xl">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+        <a href="https://www.youtube.com" target="_blank" class="text-white hover:text-yellow-500 text-2xl">
+          <i class="fab fa-youtube"></i>
+        </a>
+        <a href="https://www.tiktok.com" target="_blank" class="text-white hover:text-yellow-500 text-2xl">
+          <i class="fab fa-tiktok"></i>
+        </a>
+      </div>
+  
       <div class="flex items-center justify-center col-start-2">
-        <a href="#" class="flex items-center">
+        <a routerLink="/" class="flex items-center">
           <img src="/assets/img/logo-star-wars.png" alt="logo" class="h-40 sm:h-60 object-contain" />
         </a>
       </div>
-
-     <button (click)="toggleMenu()"
-     class="text-gray-500 lg:hidden inline-flex items-center justify-end p-2 rounded-lg ml-1 hover:bg-gray-100 focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
-    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
-    </button>
-
+  
+      <button (click)="toggleMenu()"
+       class="text-gray-500 lg:hidden inline-flex items-center justify-end p-2 rounded-lg ml-1 hover:bg-gray-100 focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
+      <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
+      </button>
+  
       <div class="hidden lg:flex items-center justify-end space-x-4">
-        <a href="#" class="text-white font-medium rounded-lg text-sm px-4 py-2">Log in</a>
-        <a href="#" class="text-black bg-yellow-500 hover:bg-yellow-600 rounded-lg text-sm px-4 py-2">Sign up</a>
+        @if(isAuthenticated) {
+          <span class="text-white font-medium rounded-lg text-sm px-4 py-2">{{ username }}</span>
+          <button (click)="logout()" class="text-black bg-yellow-500 hover:bg-yellow-600 rounded-lg text-sm px-4 py-2">
+          Salir
+          </button>
+        } @else {
+        <a routerLink="/login" class="text-white font-medium rounded-lg text-sm px-4 py-2">INGRESAR</a>
+        <a routerLink="/register" class="text-black bg-yellow-500 hover:bg-yellow-600 rounded-lg text-sm px-4 py-2">REGISTRASE</a>
+        }
       </div>
+      
     </nav>
 
+    <div role="tablist" class="tabs tabs-lifted justify-center text-white-custom hidden lg:flex">
+      <a routerLink="/home" routerLinkActive="tab-active" class="tab" role="tab">HOME</a>
+      <a routerLink="/starships" routerLinkActive="tab-active" class="tab" role="tab">STARSHIPS</a>
+      <a routerLink="/pilotos" routerLinkActive="tab-active" class="tab" role="tab">PILOTOS</a>
+    </div>
+    
+    <!--Modal de pequeño-->
      @if(isOpen) {
-     <div class="lg:hidden bg-black text-white absolute w-full z-10 border-t border-gray-700">
-      <div class="flex flex-col items-center  space-y-4 py-4">
-
+      <div class="lg:hidden bg-black text-white absolute w-full z-10 border-t border-gray-700">
+      <div class="flex flex-col items-center space-y-4 py-4">
         <a routerLink="/home" class="block text-white">HOME</a>
         <a routerLink="/starships" class="block text-white">STARSHIPS</a>
         <a routerLink="/pilotos" class="block text-white">PILOTOS</a>
 
-        <div class="space-y-2 w-full px-4">
-          <a routerLink="/login" class="block text-white bg-gray-700 py-2 rounded-lg text-center">Log in</a>
-          <a routerLink="/register" class="block text-black bg-yellow-500 py-2 rounded-lg text-center">Sign up</a>
-        </div>
+        
+      <div class="space-y-2 w-full px-4">
+        <a routerLink="/login" class="block text-white bg-gray-700 py-2 rounded-lg text-center">INGRESAR</a>
+        <a routerLink="/register" class="block text-black bg-yellow-500 py-2 rounded-lg text-center">REGISTRARSE</a>
+      </div>
       </div>
     </div>
 }
   </header>
 
-  <div role="tablist" class="tabs tabs-lifted justify-center text-white-custom hidden lg:flex">
-    <a routerLink="/home" routerLinkActive="tab-active" class="tab" role="tab">HOME</a>
-    <a routerLink="/starships" routerLinkActive="tab-active" class="tab" role="tab">STARSHIPS</a>
-    <a routerLink="/pilotos" routerLinkActive="tab-active" class="tab" role="tab">PILOTOS</a>
-  </div>
+ 
 
   <router-outlet></router-outlet>
 </body>
