--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,17 +6,19 @@
     <title>Document</title>
 </head>
 <body>
- <app-navegacion></app-navegacion>
+
+<app-navegacion></app-navegacion>
 
  <div class="flex justify-center items-center">
     <div class="carousel max-w-5xl h-auto mx-auto mt-8 rounded-lg overflow-hidden shadow-lg">
+      
         <div id="slide1" class="carousel-item relative w-full h-full">
             <img src="/assets/img/lego.jpg" class="w-full h-full object-cover" />
             <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
             <a href="#slide4" class="btn btn-circle" (click)="navigateToSlide($event, 'slide4')">❮</a>
             <a href="#slide2" class="btn btn-circle" (click)="navigateToSlide($event, 'slide2')">❯</a>
+            </div>
         </div>
-      </div>
 
       <div id="slide2" class="carousel-item relative w-full h-full">
         <img src="/assets/img/halloween.jpeg" class="w-full h-full object-cover" />
@@ -27,12 +29,29 @@
     </div>
 
       <div id="slide3" class="carousel-item relative w-full h-full">
-        <img src="/assets/img/skeleton-crew.webp" class="w-full h-full object-cover" />
-        <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-          <a href="#slide2" class="btn btn-circle" (click)="navigateToSlide($event, 'slide2')">❮</a>
-          <a href="#slide4" class="btn btn-circle" (click)="navigateToSlide($event, 'slide4')">❯</a>
+
+        <div class="relative w-full h-full">
+            <img src="/assets/img/skeleton-crew.webp" class="w-full h-full object-cover" />
+            <div class="absolute inset-0 bg-gradient-to-r from-black via-transparent to-transparent opacity-90"></div>
         </div>
-      </div>
+
+        <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+            <a href="#slide2" class="btn btn-circle" (click)="navigateToSlide($event, 'slide2')">❮</a>
+            <a href="#slide4" class="btn btn-circle" (click)="navigateToSlide($event, 'slide4')">❯</a>
+        </div>
+
+        <div class="absolute top-20 left-10 max-w-md text-white p-4 bg-opacity-40 rounded-lg">
+            <p class="text-lg italic"style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);">Mira el primer trailer de *Skeleton Crew*, luego disfruta de la aventura a partir del 3 de diciembre</p>
+            <div class="flex space-x-4 mt-4">
+                <button class="bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-2 px-6 rounded">
+                    MIRAR TRAILER
+                </button>
+                <button class="bg-black border border-yellow-500 hover:bg-gray-800 text-white font-bold py-2 px-6 rounded">
+                    LEER MÁS
+                </button>
+            </div>
+        </div>
+    </div>
 
       <div id="slide4" class="carousel-item relative w-full h-full">
         <img src="/assets/img/navidad.jpg" class="w-full h-full object-cover" />
