--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,13 +1,49 @@
-<form [formGroup]="formLogin">
+<div class="relative flex items-center justify-center min-h-screen">
 
-    <div>
-        <label for="email">Email</label>
-        <input type="email" class="form-control text-black" formControlName="email">
+    <video src="assets/video/estrellas.mp4" class="absolute top-0 left-0 w-full h-full object-cover -z-10" autoplay loop muted>
+    </video>
+
+    <div class="relative bg-black bg-opacity-80 rounded-lg shadow-lg p-8 w-full max-w-md z-10">
+
+        <div class="flex justify-center mb-6">
+            <img src="/assets/img/logo-star-wars.png" 
+                 alt="LogoStarWars" 
+                 class="w-32 h-auto"/>
+        </div>
+
+        <h2 class="text-lg font-semibold text-left text-white mb-4">Iniciar Sesión</h2>
+
+        <form [formGroup]="formLogin" class="space-y-4">
+
+            <div>
+                <label for="email" class="block text-sm font-medium text-white mb-1">Email</label>
+                <input type="email" id="email" formControlName="email" 
+                       class="w-full px-4 py-2 bg-gray-700 text-white rounded focus:outline-none focus:ring-2 focus:ring-yellow-400"
+                       placeholder="Introduce tu email">
+            </div>
+
+            <div>
+                <label for="password" class="block text-sm font-medium text-white mb-1">Contraseña</label>
+                <input type="password" id="password" formControlName="password" 
+                       class="w-full px-4 py-2 bg-gray-700 text-white rounded focus:outline-none focus:ring-2 focus:ring-yellow-400"
+                       placeholder="Introduce tu contraseña">
+            </div>
+
+            <button type="submit" (click)="Login()" 
+                    class="w-full py-2 mt-4 bg-yellow-500 text-gray-900 font-semibold rounded hover:bg-yellow-600 focus:outline-none focus:ring-2 focus:ring-yellow-400">
+                Entrar
+            </button>
+        </form>
+
+        <div class="mt-6 text-center">
+            <p class="text-sm text-gray-400">
+                ¿No tienes cuenta? 
+                <a routerLink="/register" class="text-yellow-500 hover:underline">Crear cuenta</a>
+            </p>
+        </div>
+
     </div>
-    <div>
-        <label for="password">Contraseña</label>
-        <input type="password" class="form-control text-black" formControlName="password">
-    </div>
-    <input type="submit" value="Enviar" (click)="Login()" class="btn">
-    
-</form>
+</div>
+
+
+
