--- a/src/app/navegacion/navegacion.component.html
+++ b/src/app/navegacion/navegacion.component.html
@@ -27,10 +27,10 @@
           <i class="fab fa-tiktok"></i>
         </a>
       </div>
-  
+
       <div class="flex items-center justify-center col-start-2">
         <a routerLink="/" class="flex items-center">
-          <img src="/assets/img/logo-star-wars.png" alt="logo" class="h-40 sm:h-60 object-contain" />
+          <img src="/assets/img/logo-star-wars.png" alt="logo" class="h-40 sm:h-50 object-contain" />
         </a>
       </div>
   
@@ -53,11 +53,13 @@
       
     </nav>
 
-    <div role="tablist" class="tabs tabs-lifted justify-center text-white-custom hidden lg:flex">
+    <div role="tablist" class="tabs tabs-lifted justify-center text-white-custom hidden lg:flex border-b-2 border-gray-500">
       <a routerLink="/home" routerLinkActive="tab-active" class="tab" role="tab">HOME</a>
       <a routerLink="/starships" routerLinkActive="tab-active" class="tab" role="tab">STARSHIPS</a>
       <a routerLink="/pilotos" routerLinkActive="tab-active" class="tab" role="tab">PILOTOS</a>
+      <a routerLink="/films" routerLinkActive="tab-active" class="tab" role="tab">PELICULAS</a>
     </div>
+    
     
     <!--Modal de pequeño-->
      @if(isOpen) {
@@ -66,6 +68,7 @@
         <a routerLink="/home" class="block text-white">HOME</a>
         <a routerLink="/starships" class="block text-white">STARSHIPS</a>
         <a routerLink="/pilotos" class="block text-white">PILOTOS</a>
+        <a routerLink="/films" routerLinkActive="tab-active" class="tab" role="tab">PELICULAS</a>
 
         
       <div class="space-y-2 w-full px-4">
@@ -73,11 +76,28 @@
         <a routerLink="/register" class="block text-black bg-yellow-500 py-2 rounded-lg text-center">REGISTRARSE</a>
       </div>
       </div>
+
+      <div class="flex space-x-6 col-start-1 justify-center items-center ml-4 mt-5 lg:ml-10">
+        <a href="https://www.facebook.com" target="_blank" class="text-white hover:text-yellow-500 text-2xl">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://www.instagram.com" target="_blank" class="text-white hover:text-yellow-500 text-2xl">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://www.linkedin.com" target="_blank" class="text-white hover:text-yellow-500 text-2xl">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+        <a href="https://www.youtube.com" target="_blank" class="text-white hover:text-yellow-500 text-2xl">
+          <i class="fab fa-youtube"></i>
+        </a>
+        <a href="https://www.tiktok.com" target="_blank" class="text-white hover:text-yellow-500 text-2xl">
+          <i class="fab fa-tiktok"></i>
+        </a>
+      </div>
+
     </div>
 }
   </header>
-
- 
 
   <router-outlet></router-outlet>
 </body>
