--- a/src/app/films/films.component.html
+++ b/src/app/films/films.component.html
@@ -1,26 +1,23 @@
-<app-navegacion></app-navegacion>
-
-<div class="container mx-auto p-4">
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
-@for(film of films; track film.title) {
-    <div class="rounded-lg p-4 shadow-md bg-gray-800">
-        <p class="text-white text-lg font-semibold">{{ film.title }}</p>
-        <img
-            class="w-full h-full object-cover rounded"
-            [src]="
-                'https://starwars-visualguide.com/assets/img/films/' +
-                film.url.split('/').slice(-2, -1)[0] +
-                '.jpg'
-            "
-            alt="Imagen de {{ film.title }}"
-        />
-        <p class="text-gray-300">Director: {{ film.director }}</p>
-        <p class="text-gray-300">Productor: {{ film.producer }}</p>
-
-        <button (click)="verDetalles('films')" class="mt-2 bg-yellow-500 text-gray-900 font-semibold rounded py-1 px-3 hover:bg-yellow-600">
-            Ver Detalles
-        </button>
+<div class="w-full">
+    <hr class="border-gray-600 w-2/4 mb-2 mx-auto">
+    <h3 class="text-2xl text-center mb-2">PELICULAS</h3>
+    <hr class="border-gray-600 w-2/4 mb-2 mx-auto">
+</div>
+  
+  <div class="flex flex-wrap justify-center">
+    <div class="card bg-black shadow-md shadow-white mx-2 p-4">
+      @if (peliculas.length > 0) {
+        <div class="flex flex-wrap justify-center">
+          @for (pelicula of peliculas; track pelicula.title) {
+            <div class="bg-opacity-40 bg-slate-700 text-white font-bold p-4 m-2 rounded-lg flex flex-col items-center">
+              <img class="w-full h-auto object-cover rounded mt-2" [src]="'https://starwars-visualguide.com/assets/img/films/' + pelicula.url.split('/').slice(-2, -1)[0] + '.jpg'"
+              alt="Imagen-de-pelicula" />
+              <h4 class="text-lg mt-3">{{ pelicula.title }}</h4>
+            </div>
+          }
+        </div>
+      } @else {
+        <p class="text-gray-400">No hay películas disponibles para esta nave.</p>
+      }
     </div>
-}
-</div>
-</div>
+  </div>
