--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,4 +1,51 @@
+
+
 .logo-small {
-    max-width: 120px; 
+    max-width: 120px;
     height: auto;
+}
+
+.carousel-item {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
+.carousel-item img {
+    width: 100%;
+    height: auto;
+}
+
+.text-box {
+    color: white;
+    padding: 16px;
+    border-radius: 8px;
+    margin-top: 16px;
+    text-align: left;
+    width: 90%;
+}
+
+@media (min-width: 920px) {
+    .carousel-item {
+        flex-direction: row;
+    }
+    .text-box {
+        position: absolute;
+        top: 3.5rem;
+        left: 2.5rem;
+        max-width: 500px;
+        text-align: left;
+        margin-top: 0;
+        justify-content: start;
+    }
+}
+
+@media (max-width: 920px) {
+    .text-box {
+        margin-left: 20px;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
+    }
+    .logo-small {
+    max-width: 100px;
+    }
 }
