--- a/src/app/pilotos/pilotos.component.html
+++ b/src/app/pilotos/pilotos.component.html
@@ -1,25 +1,26 @@
-<app-navegacion></app-navegacion>
-
-<div class="container mx-auto p-4">
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
-@for(piloto of pilotos; track piloto.name) {
-    <div class="rounded-lg p-4 shadow-md bg-gray-800">
-        <p>{{ piloto.name }}</p>
-    <img
-                  class="w-full h-32 object-cover"
-                  [src]="
-                      'https://starwars-visualguide.com/assets/img/people/' +
-                      piloto.url.split('/').slice(-2, -1)[0] +
-                      '.jpg'
-                  "
-                  alt="Imagen de {{ piloto.id }}"
-              />
-    <p>{{ piloto.vehicles }}</p>
-    <p>{{ piloto.films }}</p>
-
-    <button (click)="verDetalles('pilotos')"></button>
-</div>
-}
-</div>
-</div>
+<div class="w-full">
+    <hr class="border-gray-600 w-2/4 mb-2 mx-auto">
+    <h3 class="text-2xl text-center mb-2">PILOTOS</h3>
+    <hr class="border-gray-600 w-2/4 mb-2 mx-auto">
+  </div>
+  
+  <div class="flex flex-wrap justify-center">
+    <div class="card bg-black  shadow-md shadow-white mx-2 p-4">
+      @if (pilotos.length > 0) {
+        <div class="flex flex-wrap justify-center">
+          @for (piloto of pilotos; track piloto.name) {
+            <div class="bg-opacity-40 bg-slate-700 text-white font-bold p-4 m-2 rounded-lg flex flex-col items-center">
+              <figure class="mt-2">
+                <img [src]="'https://starwars-visualguide.com/assets/img/characters/' + piloto.url.split('/').slice(-2, -1)[0] + '.jpg'"
+                     alt="{{ piloto.name }}" class="w-32 h-auto rounded" />
+              </figure>
+              <h4 class="text-lg mt-3">{{ piloto.name }}</h4>
+            </div>
+          }
+        </div>
+      } @else {
+        <p class="text-gray-400">No hay pilotos disponibles para esta nave.</p>
+      }
+    </div>
+  </div>
 
