--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -6,13 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-<div class="relative flex items-center justify-center min-h-screen">
+<div class="flex items-center justify-center min-h-screen">
 
-  <video class="absolute top-0 left-0 w-full h-full object-cover -z-10" >
-  <source src="/assets/video/estrellas.mp4" type="video/mp4">
-  </video>
-
-  <div class="relative bg-black bg-opacity-80 rounded-lg shadow-lg p-8 w-full max-w-md z-10">
+  <div class="bg-black bg-opacity-80 border-2 border-gray-700 rounded-lg shadow-lg p-8 w-full max-w-md z-10">
 
       <div class="flex justify-center mb-6">
           <img src="/assets/img/logo-star-wars.png" 
@@ -22,13 +18,16 @@
 
       <h2 class="text-lg font-semibold text-left text-white mb-4">Crea tu cuenta</h2>
 
-      <form [formGroup]="form" class="space-y-4">
+      <form [formGroup]="form" (ngSubmit)="Registrarse()" class="space-y-4">
 
         <div>
           <label for="name" class="block text-sm font-medium text-white mb-1">Nombre</label>
           <input type="text" id="name" formControlName="name" 
                  class="w-full px-4 py-2 bg-gray-700 text-white rounded focus:outline-none focus:ring-2 focus:ring-yellow-400"
                  placeholder="Introduce tu nombre">
+                 @if(form.get('name')?.invalid && (form.get('name')?.dirty || form.get('name')?.touched)) {
+                  <div class="text-red-500 text-sm">El nombre es requerido</div>
+                }
       </div>
 
           <div>
@@ -36,6 +35,14 @@
               <input type="email" id="email" formControlName="email" 
                      class="w-full px-4 py-2 bg-gray-700 text-white rounded focus:outline-none focus:ring-2 focus:ring-yellow-400"
                      placeholder="Introduce tu email">
+                     @if(correoEnUso) {
+                      <div class="text-red-500 text-sm">
+                      Ya hay una cuenta registrada con este correo.
+                    </div>
+                  }
+                     @if(form.get('email')?.invalid && (form.get('email')?.dirty || form.get('email')?.touched)) {
+                      <div class="text-red-500 text-sm">El email es requerido y debe ser válido</div>
+                    }
           </div>
 
           <div>
@@ -43,6 +50,9 @@
               <input type="password" id="password" formControlName="password" 
                      class="w-full px-4 py-2 bg-gray-700 text-white rounded focus:outline-none focus:ring-2 focus:ring-yellow-400"
                      placeholder="Introduce tu contraseña">
+                     @if(form.get('password')?.invalid && (form.get('password')?.dirty || form.get('password')?.touched)) {
+                      <div class="text-red-500 text-sm">La contraseña es requerida y debe tener al menos 6 caracteres</div>
+                    }
           </div>
 
           <button type="submit" (click)="Registrarse()" 
@@ -50,7 +60,6 @@
              Crear Cuenta
           </button>
       </form>
-
 
   </div>
 </div>
