--- a/src/app/starships/starships.component.html
+++ b/src/app/starships/starships.component.html
@@ -8,26 +8,19 @@
 <body>
     <app-navegacion></app-navegacion>
     <div class="container mx-auto p-4">
-        <h1 class="text-3xl font-bold mb-6 text-center">STARSHIPS</h1>
+        <h1 class="text-3xl font-bold mb-6 text-center">NAVES</h1>
 
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+        <div class="card-container">
           @for (starship of starships; track starship.id) {
-            <div class="rounded-lg p-4 shadow-md bg-gray-800">
-              <h3 class="text-xl font-semibold text-white mb-2">
-                  {{ starship.name }}
-              </h3>
-              <img
-                  class="w-full h-32 object-cover"
-                  [src]="
-                      'https://starwars-visualguide.com/assets/img/starships/' +
-                      starship.url.split('/').slice(-2, -1)[0] +
-                      '.jpg'
-                  "
-                  alt="Imagen de {{ starship.name }}"
-              />
-              <p class="text-gray-300 mb-4">
-                  {{ starship.model }}
-              </p>
+            <div class="starship-card">
+              <div>
+                <h3 class="text-xl font-semibold starship-name mb-2 uppercase">
+                    {{ starship.name }}
+                </h3>
+                <p class="text-gray-300 mb-4">
+                    {{ starship.model }}
+                </p>
+              </div>
 
               <button
                   (click)="verDetalles(starship.url)"
@@ -37,19 +30,10 @@
               </button>
             </div>
           }
-        
         </div>
       </div>
 
-
-      <div class="text-center mt-8">
-          <button
-              (click)="cargarNuevas()"
-              class="bg-yellow-500 text-black px-6 py-2 rounded-lg shadow-md hover:bg-yellow-700"
-          >
-              Cargar más
-          </button>
-      </div>
-
+      <app-footer></app-footer>
 </body>
 </html>
+
